--- a/templates/auth.html.twig
+++ b/templates/auth.html.twig
@@ -8,7 +8,7 @@
         <section class="main">
             Login: <input type="text" name="login"><br>
             Password: <input type="password" name="password"><br>
-            <input id="submit" type="submit" name="signin" value="Sign In"> <a href="/reg">SignUp</a>
+            <input id="submit" type="submit" name="signin" value="Sign In"> <a href="/registration">SignUp</a>
         </section>
     </section>
 {% endblock %}
