--- a/templates/reg.html.twig
+++ b/templates/reg.html.twig
@@ -8,7 +8,7 @@
     <section class="main">
         Login: <input type="text" name="login"><br>
         Password: <input type="password" name="password"><br>
-        <input id="submit" type="submit" name="signup" value="Sign Up"> <a href="/auth">SignIn</a>
+        <input id="submit" type="submit" name="signup" value="Sign Up"> <a href="/authorization">SignIn</a>
     </section>
 </section>
 {% endblock %}
