Work auth and reg

--- a/templates/todo.html.twig
+++ b/templates/todo.html.twig
@@ -4,6 +4,7 @@
     <section class="todoapp">
         <header class="header">
             <h1>todos</h1>
+            <p class="info">You sign in as {{ login }} - <a href="/exit">exit?</a></p>
             <input class="new-todo" placeholder="What needs to be done?" autofocus>
         </header>
         <section class="main">
